--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                         <i class="fa-solid fa-laptop-code"></i>
                     </div>
                     <h4 class="service-title">Web Development</h4>
-                    <p class="service-desc">Membangun website yang tidak hanya menarik, tapi juga menjual</p>
+                    <p class="service-desc">Developing a website which is not only visually appealing, but also effective in generating business
+</p>
                 </div>
             </div>
 
@@ -112,7 +113,7 @@
                         <i class="fa-solid fa-layer-group"></i>
                     </div>
                     <h4 class="service-title">Full-stack Development</h4>
-                    <p class="service-desc">Solusi End-to-End : Dari antarmuka hingga database</p>
+                    <p class="service-desc">End-to-End Solutions: From UI to Database</p>
                 </div>
             </div>
 
@@ -122,7 +123,7 @@
                         <i class="fa-solid fa-code"></i>
                     </div>
                     <h4 class="service-title">Software Development</h4>
-                    <p class="service-desc">Transformasi ide menjadi sistem perangkat lunak yang tangguh</p>
+                    <p class="service-desc">Turning ideas to powerful software solutions</p>
                 </div>
             </div>
         </div>
@@ -203,7 +204,7 @@
                     </div>
                     <div>
                         <h6 class="mb-0 fw-bold text-white">Lokasi</h6>
-                        <p class="text-white-50 mb-0">Jakarta, Indonesia</p>
+                        <p class="text-white-50 mb-0">Bogor, Indonesia</p>
                     </div>
                 </div>
             </div>
@@ -282,7 +283,7 @@
         <hr class="mt-5 mb-4" style="border-color: rgba(255,255,255,0.1);">
         
         <div class="text-center">
-            <p class="text-secondary small mb-0">&copy; 2026 {{ config('app.name') }}. Built with <i class="fa-solid fa-heart text-danger"></i> using Laravel & Bootstrap.</p>
+            <p class="text-secondary small mb-0">&copy; 2026 My Portofolio Built with <i class="fa-solid fa-heart text-danger"></i></p>     
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -290,4 +291,5 @@
     <script src="scripts.js"></script>
 </body>
 </footer>
+
 </html>
