--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     backSpeed: 30,    // Kecepatan hapus
     backDelay: 2000,  // Jeda sebelum hapus (2 detik)
     loop: true,       // Biar muter terus
-    cursorChar: 'l',  // Bentuk kursornya
+    cursorChar: '|',  // Bentuk kursornya
   });
 </script>
 <script>
@@ -425,5 +425,6 @@ document.addEventListener('DOMContentLoaded', function() {
 </footer>
 
 </html>
+
 
 
