--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
             </div>
         </div>
     </section>
-    <script src="assets/js/typed.min.js"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </footer>
 
 </html>
+
 
 
 
