--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         </div>
 
                         <div class="button-group">
-                            <a href="#" class="btn btn-outline-light btn-lg fw-bold px-5" data-lang="btn_hire">Hire Me</a>
-                            <a href="CV_ARUNARA.pdf" download="CV_ARUNARA.pdf" class="btn btn-primary btn-lg fw-bold px-5 me-md-3 mb-3 mb-md-0" data-lang="btn_cv">Download CV</a>
+                            <a href="#contact" class="btn btn-outline-light btn-lg fw-bold px-5" data-lang="btn_hire">Hire Me</a>
+                            <a href="/CV_ARUNARA.pdf" download="CV_ARUNARA.pdf" class="btn btn-primary btn-lg fw-bold px-5 me-md-3 mb-3 mb-md-0" data-lang="btn_cv">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -332,3 +332,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
