--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                     <h4 class="fw-bold mb-3"><span class="text-primary">MY</span>PORTFOLIO</h4>
                     <p class="text-secondary" data-lang="footer_desc">Membangun solusi digital yang fungsional dan estetik dengan sentuhan teknologi terbaru.</p>
                     <div class="mt-4">
-                        <a href="#" class="text-white me-3"><i class="fa-brands fa-github fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                        <a href="https://github.com/arunara8" class="text-white me-3"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="https://www.linkedin.com/in/aditya-nugraha-891932261?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="text-white me-3"><i class="fa-brands fa-linkedin fa-lg"></i></a>
                         <a href="https://www.instagram.com/sepsigmay/" class="text-white"><i class="fa-brands fa-instagram fa-lg"></i></a>
                     </div>
                 </div>
@@ -303,5 +303,6 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
