--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -300,9 +300,10 @@
         </div>
     </section>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="scripts.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
