--- a/index.html
+++ b/index.html
@@ -73,20 +73,37 @@
                             Hello! I'm Aditya Nugraha. A Full Stack Developer obsessed with clean code and seamless user experience. I specialize in building digital products that not only look good, but also perform at their best. My focus is on helping businesses transform through modern and future-proof technology solutions
                         </p>
 
-                        <div class="row mb-5">
-                            <div class="col-6 list-item-neon mb-2">
-                                <i class="fa-solid fa-square-check me-2"></i> Laravel & PHP
-                            </div>
-                            <div class="col-6 list-item-neon mb-2">
-                                <i class="fa-solid fa-square-check me-2"></i> Bootstrap 5
-                            </div>
-                            <div class="col-6 list-item-neon mb-2">
-                                <i class="fa-solid fa-square-check me-2"></i> MySQL Database
-                            </div>
-                            <div class="col-6 list-item-neon mb-2">
-                                <i class="fa-solid fa-square-check me-2"></i> UI/UX Design
-                            </div>
-                        </div>
+                        <div class="tech-section-wrapper mb-5">
+    <div class="tech-stack-slider">
+        <div class="tech-track-left">
+            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+        </div>
+    </div>
+
+    <div class="tech-stack-slider mt-3">
+        <div class="tech-track-right">
+            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
+            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
+            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
+            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
+            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+        </div>
+    </div>
+</div>
 
                         <div class="button-group">
                             <a href="#contact" class="btn btn-outline-light btn-lg fw-bold px-5" data-lang="btn_hire">Hire Me</a>
@@ -297,6 +314,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
