--- a/index.html
+++ b/index.html
@@ -77,22 +77,34 @@
                         <div class="tech-section-wrapper mb-5">
     <div class="tech-stack-slider">
         <div class="tech-track-left">
-    <div class="tech-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
-    <div class="tech-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
-    <div class="tech-item"><i class="devicon-bootstrap-plain colored"></i><span>Bootstrap 5</span></div>
-    <div class="tech-item"><i class="devicon-mysql-plain colored"></i><span>MySQL</span></div>
-    <div class="tech-item"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span></div>
+            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+        </div>
     </div>
 
-<div class="tech-track-right">
-    <div class="tech-item"><i class="devicon-figma-plain colored"></i><span>Figma</span></div>
-    <div class="tech-item"><i class="devicon-html5-plain colored"></i><span>HTML5</span></div>
-    <div class="tech-item"><i class="devicon-css3-plain colored"></i><span>CSS3</span></div>
-    <div class="tech-item"><i class="devicon-github-original"></i><span>GitHub</span></div>
-    <div class="tech-item"><i class="fa-solid fa-code" style="color: #9eff00;"></i><span>Clean Code</span></div>
-</div>
+    <div class="tech-stack-slider mt-3">
+        <div class="tech-track-right">
+            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
+            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
+            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
+            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
+            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+        </div>
     </div>
-                        </div>
+</div>
                         <div class="button-group">
                             <a href="#contact" class="btn btn-outline-light btn-lg fw-bold px-5" data-lang="btn_hire">Hire Me</a>
                             <a href="/CV_ARUNARA.pdf" download="CV_ARUNARA.pdf" class="btn btn-primary btn-lg fw-bold px-5 me-md-3 mb-3 mb-md-0" data-lang="btn_cv">Download CV</a>
@@ -302,6 +314,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
