--- a/index.html
+++ b/index.html
@@ -74,35 +74,25 @@
                             Hello! I'm Aditya Nugraha. A Full Stack Developer obsessed with clean code and seamless user experience. I specialize in building digital products that not only look good, but also perform at their best. My focus is on helping businesses transform through modern and future-proof technology solutions
                         </p>
 
-                        <div class="tech-section-wrapper mb-5">
-    <div class="tech-stack-slider">
-        <div class="tech-track-left">
-            <div class="tech-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
-            <div class="tech-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
-            <div class="tech-item"><i class="devicon-bootstrap-plain colored"></i><span>Bootstrap 5</span></div>
-            <div class="tech-item"><i class="devicon-MySQL-plain colored"></i><span>MySQL</span></div>
-            <div class="tech-item"><i class="devicon-JavaScript-plain colored"></i><span>JavaScript</span></div>
-            <div class="tech-item"><i class="devicon-laravel-plain colored"></i><span>Laravel</span></div>
-            <div class="tech-item"><i class="devicon-php-plain colored"></i><span>PHP</span></div>
-            <div class="tech-item"><i class="devicon-bootstrap-plain colored"></i><span>Bootstrap 5</span></div>
-            <div class="tech-item"><i class="devicon-MySQL-plain colored"></i><span>MySQL</span></div>
-            <div class="tech-item"><i class="devicon-JavaScript-plain colored"></i><span>JavaScript</span></div>
-        </div>
-    </div>
+                        <div class="tech-stack-slider mb-5">
+    <div class="tech-track">
+        <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+        <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+        <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+        <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+        <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+        <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+        <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+        <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
 
-    <div class="tech-stack-slider mt-3">
-        <div class="tech-track-right">
-            <div class="tech-item"><i class="devicon-figma-plain colored"></i><span>UI/UX Design</span></div>
-            <div class="tech-item"><i class="devicon-html5-plain colored"></i><span>HTML5</span></div>
-            <div class="tech-item"><i class="devicon-css3-alt-plain colored"></i><span>CSS3</span></div>
-            <div class="tech-item"><i class="devicon-github-plain colored"></i><span>Git & GitHub</span></div>
-            <div class="tech-item"><i class="devicon-code-plain colored"></i><span>Clean Code</span></div>
-            <div class="tech-item"><i class="devicon-figma-plain colored"></i><span>UI/UX Design</span></div>
-            <div class="tech-item"><i class="devicon-html5-plain colored"></i><span>HTML5</span></div>
-            <div class="tech-item"><i class="devicon-css3-alt-plain colored"></i><span>CSS3</span></div>
-            <div class="tech-item"><i class="devicon-github-plain colored"></i><span>Git & GitHub</span></div>
-            <div class="tech-item"><i class="devicon-code-plain colored"></i><span>Clean Code</span></div>
-        </div>
+        <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
+        <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
+        <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
+        <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
+        <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+        <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
+        <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
+        <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
     </div>
 </div>
                         <div class="button-group">
@@ -314,6 +304,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
