--- a/index.html
+++ b/index.html
@@ -77,31 +77,31 @@
                         <div class="tech-section-wrapper mb-5">
     <div class="tech-stack-slider">
         <div class="tech-track-left">
-            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
-            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
-            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
-            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
-            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
-            <div class="tech-item"><i class="fa-brands fa-laravel"></i><span>Laravel</span></div>
-            <div class="tech-item"><i class="fa-brands fa-php"></i><span>PHP</span></div>
-            <div class="tech-item"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap 5</span></div>
-            <div class="tech-item"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
-            <div class="tech-item"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+            <div class="tech-item t-laravel"><i class="devicon-laravel-plain"></i><span>Laravel</span></div>
+            <div class="tech-item t-php"><i class="devicon-php-plain"></i><span>PHP</span></div>
+            <div class="tech-item t-bootstrap"><i class="devicon-bootstrap-plain"></i><span>Bootstrap</span></div>
+            <div class="tech-item t-mysql"><i class="devicon-mysql-plain"></i><span>MySQL</span></div>
+            <div class="tech-item t-javascript"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
+            <div class="tech-item t-laravel"><i class="devicon-laravel-plain"></i><span>Laravel</span></div>
+            <div class="tech-item t-php"><i class="devicon-php-plain"></i><span>PHP</span></div>
+            <div class="tech-item t-bootstrap"><i class="devicon-bootstrap-plain"></i><span>Bootstrap</span></div>
+            <div class="tech-item t-mysql"><i class="devicon-mysql-plain"></i><span>MySQL</span></div>
+            <div class="tech-item t-javascript"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
         </div>
     </div>
 
-    <div class="tech-stack-slider mt-3">
+    <div class="tech-stack-slider mt-4">
         <div class="tech-track-right">
-            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
-            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
-            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
-            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
-            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
-            <div class="tech-item"><i class="fa-brands fa-figma"></i><span>UI/UX Design</span></div>
-            <div class="tech-item"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
-            <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
-            <div class="tech-item"><i class="fa-brands fa-github"></i><span>Git & GitHub</span></div>
-            <div class="tech-item"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+            <div class="tech-item t-figma"><i class="devicon-figma-plain"></i><span>Figma</span></div>
+            <div class="tech-item t-html"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
+            <div class="tech-item t-css"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
+            <div class="tech-item t-github"><i class="devicon-github-original"></i><span>GitHub</span></div>
+            <div class="tech-item t-clean"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
+            <div class="tech-item t-figma"><i class="devicon-figma-plain"></i><span>Figma</span></div>
+            <div class="tech-item t-html"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
+            <div class="tech-item t-css"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
+            <div class="tech-item t-github"><i class="devicon-github-original"></i><span>GitHub</span></div>
+            <div class="tech-item t-clean"><i class="fa-solid fa-code"></i><span>Clean Code</span></div>
         </div>
     </div>
 </div>
@@ -314,6 +314,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
