--- a/index.html
+++ b/index.html
@@ -154,44 +154,53 @@
             </div>
         </section>
 
-        <section id="project" class="py-5 bg-black">
-            <div class="container">
-                <div class="text-center mb-5">
-                    <h6 class="text-primary fw-bold" data-lang="proj_head">SELECTED <span class="text-white fw-bold">PROJECTS</span></h6>
-                </div>
-                <div class="row g-5">
-                    <div class="col-md-6">
-                        <div class="project-card-wrapper">
-                            <div class="project-header d-flex justify-content-between align-items-end mb-3">
-                                <h4 class="project-name text-white mb-0">
-                                    <i class="fa-solid fa-arrow-down-right me-2 text-neon"></i>
-                                    E-Commerce Laravel
-                                </h4>
-                                <span class="project-year">2023</span>
-                            </div>
-                            <div class="project-display">
-                                <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1000&auto=format&fit=crop" class="img-fluid" alt="Project 1">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="project-card-wrapper">
-                            <div class="project-header d-flex justify-content-between align-items-end mb-3">
-                                <h4 class="project-name text-white mb-0">
-                                    <i class="fa-solid fa-arrow-down-right me-2 text-neon"></i>
-                                    Company Profile
-                                </h4>
-                                <span class="project-year">2024</span>
-                            </div>
-                            <div class="project-display">
-                                <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1000&auto=format&fit=crop" class="img-fluid" alt="Project 2">
-                            </div>                     
-                        </div>
+        <section id="project" class="py-5 bg-black overflow-hidden">
+    <div class="container mb-4">
+        <h2 class="text-neon text-center fw-bold" data-lang="nav_project">SELECTED PROJECTS</h2>
+    </div>
+
+    <div class="film-strip-container">
+        <div class="film-track">
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project1.jpg" alt="E-Commerce Laravel">
+                    <div class="film-overlay">
+                        <h5>E-Commerce Laravel</h5>
+                        <p>2023</p>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project2.jpg" alt="Company Profile">
+                    <div class="film-overlay">
+                        <h5>Company Profile</h5>
+                        <p>2024</p>
+                    </div>
+                </div>
+            </div>
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project3.jpg" alt="Portfolio v1">
+                    <div class="film-overlay">
+                        <h5>Portfolio v1</h5>
+                        <p>2023</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="film-item">
+                <div class="film-frame"><img src="path-to-your-project1.jpg" alt=""><div class="film-overlay"><h5>E-Commerce Laravel</h5><p>2023</p></div></div>
+            </div>
+            <div class="film-item">
+                <div class="film-frame"><img src="path-to-your-project2.jpg" alt=""><div class="film-overlay"><h5>Company Profile</h5><p>2024</p></div></div>
+            </div>
+            <div class="film-item">
+                <div class="film-frame"><img src="path-to-your-project3.jpg" alt=""><div class="film-overlay"><h5>Portfolio v1</h5><p>2023</p></div></div>
+            </div>
+        </div>
+    </div>
+</section>
         <section id="contact" class="py-5">
             <div class="container">
                 <div class="text-center mb-5">
@@ -314,6 +323,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
