--- a/index.html
+++ b/index.html
@@ -160,17 +160,35 @@
     </div>
 
     <div class="film-strip-container">
-    <div class="film-track">
-        <div class="film-item"><div class="film-frame"><img src="p1.jpg"></div></div>
-        <div class="film-item"><div class="film-frame"><img src="p2.jpg"></div></div>
-        
-        <div class="film-item"><div class="film-frame"><img src="p1.jpg"></div></div>
-        <div class="film-item"><div class="film-frame"><img src="p2.jpg"></div></div>
-        
-        <div class="film-item"><div class="film-frame"><img src="p1.jpg"></div></div>
-        <div class="film-item"><div class="film-frame"><img src="p2.jpg"></div></div>
-    </div>
-</div>
+        <div class="film-track">
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project1.jpg" alt="E-Commerce Laravel">
+                    <div class="film-overlay">
+                        <h5>E-Commerce Laravel</h5>
+                        <p>2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project2.jpg" alt="Company Profile">
+                    <div class="film-overlay">
+                        <h5>Company Profile</h5>
+                        <p>2024</p>
+                    </div>
+                </div>
+            </div>
+            <div class="film-item">
+                <div class="film-frame">
+                    <img src="path-to-your-project3.jpg" alt="Portfolio v1">
+                    <div class="film-overlay">
+                        <h5>Portfolio v1</h5>
+                        <p>2023</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="film-item">
                 <div class="film-frame"><img src="path-to-your-project1.jpg" alt=""><div class="film-overlay"><h5>E-Commerce Laravel</h5><p>2023</p></div></div>
             </div>
@@ -305,6 +323,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
