--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="film-track">
             <div class="film-item">
                 <div class="film-frame">
-                    <img src="path-to-your-project1.jpg" alt="E-Commerce Laravel">
+                    <img src="assets/img/hero-bg.jpg" alt="E-Commerce Laravel">
                     <div class="film-overlay">
                         <h5>E-Commerce Laravel</h5>
                         <p>2023</p>
@@ -172,7 +172,7 @@
             </div>
             <div class="film-item">
                 <div class="film-frame">
-                    <img src="path-to-your-project2.jpg" alt="Company Profile">
+                    <img src="assets/img/preview.jpg" alt="Company Profile">
                     <div class="film-overlay">
                         <h5>Company Profile</h5>
                         <p>2024</p>
@@ -181,7 +181,7 @@
             </div>
             <div class="film-item">
                 <div class="film-frame">
-                    <img src="path-to-your-project3.jpg" alt="Portfolio v1">
+                    <img src="assets/img/profile.jpg" alt="Portfolio v1">
                     <div class="film-overlay">
                         <h5>Portfolio v1</h5>
                         <p>2023</p>
@@ -323,6 +323,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
