--- a/index.html
+++ b/index.html
@@ -156,48 +156,19 @@
 
         <section id="project" class="py-5 bg-black overflow-hidden">
     <div class="container mb-4">
-        <h2 class="text-neon text-center fw-bold" data-lang="nav_project">SELECTED PROJECTS</h2>
+        <h2 class="text-neon text-center fw-bold">SELECTED PROJECTS</h2>
     </div>
 
     <div class="film-strip-container">
         <div class="film-track">
-            <div class="film-item">
-                <div class="film-frame">
-                    <img src="assets/img/hero-bg.jpg" alt="E-Commerce Laravel">
-                    <div class="film-overlay">
-                        <h5>E-Commerce Laravel</h5>
-                        <p>2023</p>
-                    </div>
-                </div>
-            </div>
-            <div class="film-item">
-                <div class="film-frame">
-                    <img src="assets/img/preview.jpg" alt="Company Profile">
-                    <div class="film-overlay">
-                        <h5>Company Profile</h5>
-                        <p>2024</p>
-                    </div>
-                </div>
-            </div>
-            <div class="film-item">
-                <div class="film-frame">
-                    <img src="assets/img/profile.jpg" alt="Portfolio v1">
-                    <div class="film-overlay">
-                        <h5>Portfolio v1</h5>
-                        <p>2023</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="film-item">
-                <div class="film-frame"><img src="path-to-your-project1.jpg" alt=""><div class="film-overlay"><h5>E-Commerce Laravel</h5><p>2023</p></div></div>
-            </div>
-            <div class="film-item">
-                <div class="film-frame"><img src="path-to-your-project2.jpg" alt=""><div class="film-overlay"><h5>Company Profile</h5><p>2024</p></div></div>
-            </div>
-            <div class="film-item">
-                <div class="film-frame"><img src="path-to-your-project3.jpg" alt=""><div class="film-overlay"><h5>Portfolio v1</h5><p>2023</p></div></div>
-            </div>
+            <div class="film-item"><div class="film-frame"><img src="project1.jpg"></div></div>
+            <div class="film-item"><div class="film-frame"><img src="project2.jpg"></div></div>
+            
+            <div class="film-item"><div class="film-frame"><img src="project1.jpg"></div></div>
+            <div class="film-item"><div class="film-frame"><img src="project2.jpg"></div></div>
+            
+            <div class="film-item"><div class="film-frame"><img src="project1.jpg"></div></div>
+            <div class="film-item"><div class="film-frame"><img src="project2.jpg"></div></div>
         </div>
     </div>
 </section>
@@ -323,6 +294,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
