--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                 <div class="film-item"><div class="film-frame"><img src="p1.jpg"></div></div>
                 <div class="film-item"><div class="film-frame"><img src="p2.jpg"></div></div>
                 <div class="film-item"><div class="film-frame"><img src="p3.jpg"></div></div>
+
+                <div class="film-item"><div class="film-frame"><img src="p1.jpg"></div></div>
+                <div class="film-item"><div class="film-frame"><img src="p2.jpg"></div></div>
+                <div class="film-item"><div class="film-frame"><img src="p3.jpg"></div></div>
             </div>
         </div>
     </div>
@@ -295,6 +299,7 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
